src/test/deca/codegen/valid/object_class_with_assigned_field.deca
// @result 5
/*
    Description : Test sur une déclaration de classe vide

    Résultat : OK
*/
class A{
    int y = 5;
}
{
    A p = new A();
    println(p.y);
}
