src/test/deca/codegen/invalid/object_int_method_without_return.deca
// @result 5
// @result Error : exiting function A.y without return instruction
/*
    Description : Méthode int sans return 

    Résultat : Erreur à l'exécution
*/
class A{
    int x = 5;
    int y(){
        x = 10;
    }
}
{
    A a = new A();

    println(a.x);
    println(a.y());
    println(a.x);
}
        
